--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>عَبدُالله سَيد - مُطور ويب</title>
+    <title>عَبدُالله سَيد - مُطور مواقع</title>
     <!-- CSS -->
     <link rel="stylesheet" href="/assets/css/main.css" />
   </head>
