edit and add and make some stuff

--- a/index.html
+++ b/index.html
@@ -7,5 +7,29 @@
     <!-- CSS -->
     <link rel="stylesheet" href="/assets/css/main.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- The Website Start Here! -->
+    <div class="abdsy">
+      <!-- Header Start! -->
+      <header class="header">
+        <!-- Container Start! -->
+        <div class="container">
+          <div class="headerContent">
+            <h1 class="webSiteTitle"><a href="/">عَبدُالله سَيد</a></h1>
+            <nav class="navbar">
+              <div class="navLinks">
+                <a href="#" class="navLink">من أنا؟</a>
+                <a href="#" class="navLink">أعمالي</a>
+                <a href="#" class="navLink">تعلم معي</a>
+                <a href="#" class="navLink">تواصل!</a>
+              </div>
+            </nav>
+          </div>
+        </div>
+        <!-- Container End! -->
+      </header>
+      <!-- Header End! -->
+    </div>
+    <!-- The Website End Here! -->
+  </body>
 </html>
