--- a/index.html
+++ b/index.html
@@ -8,28 +8,36 @@
     <link rel="stylesheet" href="/assets/css/main.css" />
   </head>
   <body>
-    <!-- The Website Start Here! -->
+    <!-- Website Start -->
     <div class="abdsy">
-      <!-- Header Start! -->
+      <!-- Header Start -->
       <header class="header">
-        <!-- Container Start! -->
+        <!-- container -->
         <div class="container">
-          <div class="headerContent">
-            <h1 class="webSiteTitle"><a href="/">عَبدُالله سَيد</a></h1>
+          <div class="content">
+            <!-- brand -->
+            <div class="myBrand">
+              <img src="/assets/image/logo.svg" alt="logo" class="myLogo" />
+              <h1 class="myName"><a href="/">عَبدُالله سَيد</a></h1>
+            </div>
+            <!-- brand end -->
+            <!-- navbar -->
             <nav class="navbar">
               <div class="navLinks">
                 <a href="#" class="navLink">من أنا؟</a>
+                <a href="#" class="navLink">مهاراتي</a>
                 <a href="#" class="navLink">أعمالي</a>
-                <a href="#" class="navLink">تعلم معي</a>
-                <a href="#" class="navLink">تواصل!</a>
+                <a href="#" class="navLink">تواصل/أعمل معي</a>
               </div>
+              <!-- <span class="toggleDarkLight"><i class="fa-solid fa-moon"></i></span> -->
             </nav>
+            <!-- navbar end -->
           </div>
         </div>
-        <!-- Container End! -->
+        <!-- container end -->
       </header>
-      <!-- Header End! -->
+      <!-- Header End -->
     </div>
-    <!-- The Website End Here! -->
+    <!-- Website End -->
   </body>
 </html>
