add a hero section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <div class="content">
             <!-- brand -->
             <div class="myBrand">
-              <img src="/assets/image/logo.svg" alt="logo" class="myLogo" />
+              <img src="/assets/image/logo-light.svg" alt="logo" class="myLogo" />
               <h1 class="myName"><a href="/">عَبدُالله سَيد</a></h1>
             </div>
             <!-- brand end -->
@@ -38,6 +38,17 @@
         <!-- container end -->
       </header>
       <!-- Header End -->
+      <!-- hero section -->
+      <section class="hero">
+        <!-- container -->
+        <div class="container">
+          <div class="content">
+            <img src="/assets/image/my-avatar-light.png" alt="avatar light" class="heroAvatar" />
+          </div>
+        </div>
+        <!-- container end -->
+      </section>
+      <!-- hero section end -->
     </div>
     <!-- Website End -->
   </body>
