make a link to my x acc

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
         <!-- container -->
         <div class="container">
           <div class="content">
-            <img src="/assets/image/my-avatar-light.png" alt="avatar light" class="heroAvatar" />
+            <a href="https://x.com/abdsydev" target="_blank">
+              <img src="/assets/image/my-avatar-light.png" alt="avatar light" class="heroAvatar" />
+            </a>
           </div>
         </div>
         <!-- container end -->
