Remove Nav. Temp.

--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
             <!-- brand -->
             <div class="myBrand">
               <img src="/assets/image/logo-light.svg" alt="logo" class="myLogo" />
-              <h1 class="myName"><a href="/">عَبدُالله سَيد</a></h1>
+              <h1 class="myName"><a href="/">عَبدُالله</a></h1>
             </div>
             <!-- brand end -->
             <!-- navbar -->
+            <!--
             <nav class="navbar">
               <div class="navLinks">
                 <a href="#" class="navLink">من أنا؟</a>
@@ -30,8 +31,9 @@
                 <a href="#" class="navLink">أعمالي</a>
                 <a href="#" class="navLink">تواصل/أعمل معي</a>
               </div>
-              <!-- <span class="toggleDarkLight"><i class="fa-solid fa-moon"></i></span> -->
+              <span class="toggleDarkLight"><i class="fa-solid fa-moon"></i></span>
             </nav>
+            -->
             <!-- navbar end -->
           </div>
         </div>
